--- a/OnlineQuizzes/OnlineQuizzes.csproj
+++ b/OnlineQuizzes/OnlineQuizzes.csproj
@@ -512,6 +512,7 @@
     <Content Include="Views\Trainers\QuestionDetails.cshtml" />
     <Content Include="Views\Trainers\AddAnswersIfNull.cshtml" />
     <Content Include="Views\Shared\_Notifications.cshtml" />
+    <Content Include="Views\Trainers\EditQuiz.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
