--- a/OnlineQuizzes/OnlineQuizzes.csproj
+++ b/OnlineQuizzes/OnlineQuizzes.csproj
@@ -513,6 +513,8 @@
     <Content Include="Views\Trainers\AddAnswersIfNull.cshtml" />
     <Content Include="Views\Shared\_Notifications.cshtml" />
     <Content Include="Views\Trainers\EditQuiz.cshtml" />
+    <Content Include="Views\Trainers\EditQuestion.cshtml" />
+    <Content Include="Views\Trainers\EditAnswer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
