Add some modifications on Controllers. (Assign each action to its controller)

--- a/OnlineQuizzes/OnlineQuizzes.csproj
+++ b/OnlineQuizzes/OnlineQuizzes.csproj
@@ -382,6 +382,9 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MCQAnswersController.cs" />
+    <Compile Include="Controllers\QuestionsController.cs" />
+    <Compile Include="Controllers\QuizsController.cs" />
     <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Controllers\TrainersController.cs" />
     <Compile Include="Extensions\NotificationExtensions.cs" />
@@ -501,16 +504,16 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Trainers\Index.cshtml" />
     <Content Include="Views\Students\Index.cshtml" />
-    <Content Include="Views\Trainers\AddQuestionFormPage.cshtml" />
-    <Content Include="Views\Trainers\AddQuestions.cshtml" />
-    <Content Include="Views\Trainers\AddMCQAnswers.cshtml" />
+    <Content Include="Views\Questions\AddQuestionFormPage.cshtml" />
+    <Content Include="Views\Questions\AddQuestions.cshtml" />
+    <Content Include="Views\MCQAnswers\AddMCQAnswers.cshtml" />
     <Content Include="Views\Trainers\ListOfMyQuizzes.cshtml" />
-    <Content Include="Views\Trainers\CreateQuiz.cshtml" />
-    <Content Include="Views\Trainers\QuizDetails.cshtml" />
-    <Content Include="Views\Trainers\AddQuestionToListFormPage.cshtml" />
-    <Content Include="Views\Trainers\AddMCQAnswersToList.cshtml" />
-    <Content Include="Views\Trainers\QuestionDetails.cshtml" />
-    <Content Include="Views\Trainers\AddAnswersIfNull.cshtml" />
+    <Content Include="Views\Quizs\CreateQuiz.cshtml" />
+    <Content Include="Views\Quizs\QuizDetails.cshtml" />
+    <Content Include="Views\Questions\AddQuestionToListFormPage.cshtml" />
+    <Content Include="Views\MCQAnswers\AddMCQAnswersToList.cshtml" />
+    <Content Include="Views\Questions\QuestionDetails.cshtml" />
+    <Content Include="Views\MCQAnswers\AddAnswersIfNull.cshtml" />
     <Content Include="Views\Shared\_Notifications.cshtml" />
     <Content Include="Views\Trainers\EditQuiz.cshtml" />
     <Content Include="Views\Trainers\EditQuestion.cshtml" />
