--- a/OnlineQuizzes/OnlineQuizzes.csproj
+++ b/OnlineQuizzes/OnlineQuizzes.csproj
@@ -448,6 +448,10 @@
     <Compile Include="Migrations\202106241929402_CreateStudentInterestsTable.Designer.cs">
       <DependentUpon>202106241929402_CreateStudentInterestsTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202106242302356_CreateQuizzesPermissionTable.cs" />
+    <Compile Include="Migrations\202106242302356_CreateQuizzesPermissionTable.Designer.cs">
+      <DependentUpon>202106242302356_CreateQuizzesPermissionTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
@@ -458,6 +462,7 @@
     <Compile Include="Models\Question.cs" />
     <Compile Include="Models\QuestionType.cs" />
     <Compile Include="Models\Quiz.cs" />
+    <Compile Include="Models\QuizPermission.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\StudentInterest.cs" />
     <Compile Include="Models\Trainer.cs" />
@@ -600,6 +605,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202106241929402_CreateStudentInterestsTable.resx">
       <DependentUpon>202106241929402_CreateStudentInterestsTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106242302356_CreateQuizzesPermissionTable.resx">
+      <DependentUpon>202106242302356_CreateQuizzesPermissionTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
