Cascade Drop Down Lists When Trainer Create a Quiz. After Clicking on some major in Drop Down List The Drop Down List Of Student will be Updated automatically.

--- a/OnlineQuizzes/OnlineQuizzes.csproj
+++ b/OnlineQuizzes/OnlineQuizzes.csproj
@@ -554,6 +554,7 @@
     <Content Include="Views\Trainers\EditAnswer.cshtml" />
     <Content Include="Views\Account\StudentRegister.cshtml" />
     <Content Include="Views\Quizs\CreateQuiz.cshtml" />
+    <Content Include="Views\Shared\DisplayStudents.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
