--- a/OnlineQuizzes/packages.config
+++ b/OnlineQuizzes/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="Bootstrap.Multiselect" version="0.9.13" targetFramework="net472" />
   <package id="BootstrapNotifications" version="0.3.2" targetFramework="net472" />
   <package id="chosen" version="1.2.0" targetFramework="net472" />
   <package id="chosen.jquery" version="1.2.0" targetFramework="net472" />
