--- a/OnlineQuizzes/OnlineQuizzes.csproj
+++ b/OnlineQuizzes/OnlineQuizzes.csproj
@@ -473,6 +473,7 @@
     <Compile Include="ViewModels\NewQuestionViewModel.cs" />
     <Compile Include="ViewModels\NewQuizViewModel.cs" />
     <Compile Include="ViewModels\QuestionsWithQuizID.cs" />
+    <Compile Include="ViewModels\QuizPermissionViewModel.cs" />
     <Compile Include="ViewModels\TrainerProfile.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -557,6 +558,7 @@
     <Content Include="Views\Quizs\CreateQuiz.cshtml" />
     <Content Include="Views\Shared\DisplayStudents.cshtml" />
     <Content Include="Views\Trainers\TrainerProfile.cshtml" />
+    <Content Include="Views\Quizs\QuizStudents.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
