--- a/OnlineQuizzes/OnlineQuizzes.csproj
+++ b/OnlineQuizzes/OnlineQuizzes.csproj
@@ -492,6 +492,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AttemptQuizViewModel.cs" />
+    <Compile Include="ViewModels\GradeViewModel.cs" />
     <Compile Include="ViewModels\MCQWithQuestionIDViewModel.cs" />
     <Compile Include="ViewModels\NewPermissionViewModel.cs" />
     <Compile Include="ViewModels\NewQuestionViewModel.cs" />
@@ -585,6 +586,7 @@
     <Content Include="Views\Quizs\QuizStudents.cshtml" />
     <Content Include="Views\Quizs\NewPermission.cshtml" />
     <Content Include="Views\Students\AttemptQuiz.cshtml" />
+    <Content Include="Views\Students\SubmitQuiz.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
