--- a/OnlineQuizzes/OnlineQuizzes.csproj
+++ b/OnlineQuizzes/OnlineQuizzes.csproj
@@ -400,7 +400,8 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\Api\AdminController.cs" />
+    <Compile Include="Controllers\Api\TrainersController.cs" />
+    <Compile Include="Controllers\Api\StudentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MCQAnswersController.cs" />
